[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/HUD/IntroScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ashooterpixelfon.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/intro/intro1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/intro/intro2.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/ost/titlescreen-01.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="start" type="Node2D" parent="."]
position = Vector2( 0, -6 )

[node name="Start" type="Label" parent="start"]
margin_left = 38.0
margin_top = 91.0
margin_right = 134.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.803922, 0.623529, 1 )
text = "START"

[node name="ColorRect" type="ColorRect" parent="start"]
margin_left = 37.0
margin_top = 96.0
margin_right = 68.0
margin_bottom = 103.0
color = Color( 0.792157, 0.803922, 0.623529, 1 )

[node name="Start2" type="Label" parent="start"]
margin_left = 38.0
margin_top = 91.0
margin_right = 134.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "START"

[node name="instructions" type="Node2D" parent="."]
position = Vector2( -1, -6 )

[node name="Instructions" type="Label" parent="instructions"]
margin_left = 39.0
margin_top = 102.0
margin_right = 135.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.803922, 0.623529, 1 )
text = "INSTRUCTIONS"

[node name="ColorRect2" type="ColorRect" parent="instructions"]
visible = false
margin_left = 38.0
margin_top = 107.0
margin_right = 108.0
margin_bottom = 114.0
color = Color( 0.792157, 0.803922, 0.623529, 1 )

[node name="Instructions2" type="Label" parent="instructions"]
visible = false
margin_left = 39.0
margin_top = 102.0
margin_right = 135.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "INSTRUCTIONS"

[node name="credits" type="Node2D" parent="."]
position = Vector2( 0, -6 )

[node name="Quit" type="Label" parent="credits"]
margin_left = 38.0
margin_top = 112.0
margin_right = 134.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.803922, 0.623529, 1 )
text = "QUIT"

[node name="ColorRect3" type="ColorRect" parent="credits"]
visible = false
margin_left = 37.0
margin_top = 117.0
margin_right = 60.0
margin_bottom = 124.0
color = Color( 0.792157, 0.803922, 0.623529, 1 )

[node name="Quit2" type="Label" parent="credits"]
visible = false
margin_left = 38.0
margin_top = 112.0
margin_right = 134.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "QUIT"

[node name="Credits" type="Label" parent="."]
margin_left = 6.0
margin_top = 135.0
margin_right = 129.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.792157, 0.803922, 0.623529, 1 )
text = "CREATED BY RAUL LESSA"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
